--- a/public/index.html
+++ b/public/index.html
@@ -294,7 +294,7 @@
             }
         );
 
-        const ws = new WebSocket('ws://localhost:8080');
+        const ws = new WebSocket('ws://multiplayer-city-game.up.railway.app');
         const keys = {};
 
         document.addEventListener('keydown', (e) => {
