--- a/public/index.html
+++ b/public/index.html
@@ -294,7 +294,7 @@
             }
         );
 
-        const ws = new WebSocket('ws://websocket-multiplayergame-production.up.railway.app');
+        const ws = new WebSocket('wss://websocket-multiplayergame-production.up.railway.app');
         const keys = {};
 
         document.addEventListener('keydown', (e) => {
